--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -7,6 +7,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+ENV PYTHONPATH=/app
+
 EXPOSE 5006
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5006"]
