--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       INGESTION_SERVICE_URL: http://ingestion-service:5001
       PROCESSING_SERVICE_URL: http://processing-service:5004
       SEARCH_SERVICE_URL: http://search-service:5005
-      AI_SERVICE_URL: http://ai-service:5006
+      #AI_SERVICE_URL: http://ai-service:5006
       NOTIFICATION_SERVICE_URL: http://notification-service:5007
       BULK_UPLOAD_SERVICE_URL: http://bulk-upload-service:5008
       SAGA_ORCHESTRATOR_URL: http://saga-orchestrator:5009
