add doc agent and central logging

--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,34 +1,14 @@
 # syntax=docker/dockerfile:1
-FROM python:3.13-slim
+FROM python:3.11-slim
 
-
-
-# Upgrade pip (already included)
-RUN pip install --upgrade pip
-
-# Install curl (already included)
-
-
+# Set the working directory
+WORKDIR /app
 
 # Copy requirements.txt and install dependencies
 COPY requirements.txt .
-# syntax=docker/dockerfile:1
-# Use the latest stable Python 3.14 release, not the RC version
-FROM python:3.14.0a3-bookworm
+RUN pip install --no-cache-dir -r requirements.txt
 
-
-
-# Upgrade pip (already included)
-RUN pip install --upgrade pip
-
-
-# Copy requirements.txt and install dependencies
-COPY requirements.txt .
-#RUN pip install --no-cache-dir -i https://pypi.tuna.tsinghua.edu.cn/simple -r requirements.txt
-
-#RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy your application code
+# Copy the application code
 COPY . .
 
 # Expose the port
