--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+
 
 x-common-environment:
   &default-env
@@ -152,62 +152,85 @@ services:
     networks:
       - backend
 
-  postgres:
-    image: postgres:13
-    environment:
-      POSTGRES_DB: document_storage
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    networks:
-      - backend
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d document_storage"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  mongo:
-    image: mongo:5.0
-    ports:
-      - "27017:27017"
+  # Logging services
+  mongo-log:
+    image: mongo:6.0
+    container_name: graylog-mongo
+    restart: always
     volumes:
       - mongo_data:/data/db
     networks:
-      - backend
+      - graylog
 
   elasticsearch:
-    image: elasticsearch:7.10.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+    container_name: graylog-elasticsearch
+    restart: always
     environment:
       - discovery.type=single-node
-    ports:
-      - "9200:9200"
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
       - elasticsearch_data:/usr/share/elasticsearch/data
+    networks:
+      - graylog
+
+  graylog:
+    image: graylog/graylog:5.2
+    container_name: graylog
+    restart: always
+    environment:
+      - GRAYLOG_PASSWORD_SECRET=somepasswordpepper
+      - GRAYLOG_ROOT_PASSWORD_SHA2=8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+      - GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+      - GRAYLOG_ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - GRAYLOG_MONGODB_URI=mongodb://mongo:27017/graylog
+    ports:
+      - 9002:9000
+      - 12201:12201
+      - 12201:12201/udp
+    depends_on:
+      - mongo-log
+      - elasticsearch
+    networks:
+      - graylog
+
+  smtp:
+    image: mailhog/mailhog:latest
+    container_name: smtp
+    hostname: smtp
+    ports:
+      - "1025:1025"  # SMTP server
+      - "8025:8025"  # Web UI
     networks:
       - backend
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:3.12-management
+    container_name: rabbitmq
+    hostname: rabbitmq
     ports:
-      - "5672:5672"
-      - "15672:15672"
+      - "5672:5672"  # AMQP
+      - "15672:15672"  # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: admin
+      RABBITMQ_DEFAULT_PASS: password
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
       - backend
-    environment:
-      RABBITMQ_DEFAULT_USER: myuser
-      RABBITMQ_DEFAULT_PASS: mypassword
 
   minio:
-    image: minio/minio
+    image: minio/minio:RELEASE.2023-10-25T06-33-25Z
+    container_name: minio
+    hostname: minio
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "9000:9000"  # API
+      - "9001:9001"  # Console
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
@@ -217,13 +240,41 @@ services:
     networks:
       - backend
 
-  smtp:
-    image: mailhog/mailhog
+  mongo:
+    image: mongo:6.0
+    container_name: mongo
+    restart: always
     ports:
-      - "1025:1025"
-      - "8025:8025"
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+    volumes:
+      - mongo_data:/data/db
     networks:
       - backend
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: postgres
+    restart: always
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: document_storage
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: password
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
+
+
+networks:
+  graylog:
+    driver: bridge
+  backend:
+    driver: bridge
 
 volumes:
   postgres_data:
@@ -231,7 +282,3 @@ volumes:
   elasticsearch_data:
   rabbitmq_data:
   minio_data:
-
-networks:
-  backend:
-    driver: bridge
