all services running

--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -2,10 +2,12 @@ FROM python:3.13.1-alpine3.21
 
 WORKDIR /app
 
+# Copy requirements first for better caching
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copy only the app directory to avoid unnecessary files
+COPY app/ ./app/
 
 EXPOSE 8000
 
