--- a/processing-service/Dockerfile
+++ b/processing-service/Dockerfile
@@ -1,13 +1,13 @@
 # syntax=docker/dockerfile:1
-FROM python:3.13-slim
+# Use the latest stable Python 3.14 release, not the RC version
+FROM python:3.13.1-alpine3.21
 
-
+RUN apk add --no-cache curl
 
 # Upgrade pip (already included)
 RUN pip install --upgrade pip
 
 # Install curl (already included)
-
 
 
 # Copy requirements.txt and install dependencies
