--- a/ingestion-service/DOCKERFILE
+++ b/ingestion-service/DOCKERFILE
@@ -2,7 +2,7 @@
 # Use the latest stable Python 3.14 release, not the RC version
 FROM python:3.13.1-alpine3.21
 
-
+RUN apk add --no-cache curl
 
 # Upgrade pip (already included)
 RUN pip install --upgrade pip
