--- a/metadata-service/Dockerfile
+++ b/metadata-service/Dockerfile
@@ -2,11 +2,12 @@
 # Use the latest stable Python 3.14 release, not the RC version
 FROM python:3.13.1-alpine3.21
 
-
+RUN apk add --no-cache curl
 
 # Upgrade pip (already included)
 RUN pip install --upgrade pip
 
+# Install curl (already included)
 
 
 # Copy requirements.txt and install dependencies
@@ -14,12 +15,11 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-#
 # Copy your application code
 COPY . .
 
 # Expose the port
-EXPOSE 5001
+EXPOSE 5002
 
 # Start the application using uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5001"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "5002"]
