--- a/storage-service/Dockerfile
+++ b/storage-service/Dockerfile
@@ -1,17 +1,21 @@
 # syntax=docker/dockerfile:1
-FROM python:3.11-slim
+# Use the latest stable Python 3.14 release, not the RC version
+FROM python:3.13.1-alpine3.21
 
+RUN apk add --no-cache curl
 
 # Upgrade pip (already included)
 RUN pip install --upgrade pip
 
-WORKDIR /app
-RUN pip install --upgrade pip
-RUN apt-get update && apt-get install -y curl
+# Install curl (already included)
 
+
+# Copy requirements.txt and install dependencies
 COPY requirements.txt .
+
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy your application code
 COPY . .
 
 EXPOSE 5003
