--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -380,6 +380,22 @@ services:
     depends_on:
       - metadata-service
 
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: pgadmin
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@dms.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    depends_on:
+      - postgres
+    networks:
+      - backend
+
 networks:
   graylog:
     driver: bridge
@@ -392,3 +408,4 @@ volumes:
   elasticsearch_data:
   rabbitmq_data:
   minio_data:
+  pgadmin_data:
